ovs bridge & ensure lxd file pushes

--- a/k8s_master/files/60-bridge.j2
+++ b/k8s_master/files/60-bridge.j2
@@ -2,11 +2,7 @@ network:
   version: 2
   renderer: networkd
 
-network:
-  version: 2
-  renderer: networkd
-
-  bridges:
+  ethernets:
     bridge0:
       dhcp4: no
       addresses: [{{ master_host_ip }}]
